platform/stack/packages/data/open-metadata/manifests/install.yaml
# OPEN-METADATA INSTALL RESOURCES
# This file is auto-generated with 'platform/stack/packages/data/open-metadata/generate-manifests.sh'
---
# Source: openmetadata/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openmetadata
  labels:    
    helm.sh/chart: openmetadata-2.0.1
    app.kubernetes.io/name: openmetadata
    app.kubernetes.io/instance: openmetadata
    app.kubernetes.io/version: "2.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8585
      targetPort: http
      protocol: TCP
      name: http
    - port: 8586
      targetPort: http-admin
      protocol: TCP
      name: http-admin
  selector:
    app.kubernetes.io/name: openmetadata
    app.kubernetes.io/instance: openmetadata
---
# Source: openmetadata/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmetadata
  labels:    
    helm.sh/chart: openmetadata-2.0.1
    app.kubernetes.io/name: openmetadata
    app.kubernetes.io/instance: openmetadata
    app.kubernetes.io/version: "2.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openmetadata
      app.kubernetes.io/instance: openmetadata
  template:
    metadata:
      labels:        
        helm.sh/chart: openmetadata-2.0.1
        app.kubernetes.io/name: openmetadata
        app.kubernetes.io/instance: openmetadata
        app.kubernetes.io/version: "2.0.1"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: openmetadata
      volumes:
      containers:
        - name: openmetadata
          image: "docker.getcollate.io/openmetadata/server:2.0.1"
          imagePullPolicy: Always
          volumeMounts:
          ports:
            - name: http
              containerPort: 8585
              protocol: TCP
            - name: http-admin
              containerPort: 8586
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/v1/system/health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/v1/system/health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          startupProbe:
            failureThreshold: 5
            httpGet:
              path: /healthcheck
              port: http-admin
            periodSeconds: 60
            successThreshold: 1
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
---
# Source: openmetadata/templates/secrets.yaml
# Below block is required to create a secret for application once pre-upgrade helm hooks are applied.
---
# Source: openmetadata/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "openmetadata-test-connection"
  labels:    
    helm.sh/chart: openmetadata-2.0.1
    app.kubernetes.io/name: openmetadata
    app.kubernetes.io/instance: openmetadata
    app.kubernetes.io/version: "2.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": hook-succeeded
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['openmetadata:8585']
  restartPolicy: Never
